# oc-sentiment-ml-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MLOps.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
model/: tokenizer.pkl
oc_sentiment_ml_api/: main.py  model.py  monitoring.py  utils.py
tests/: conftest.py  test_api.py  test_model.py  test_monitoring.py
