[metadata]
name = oc-sentiment-ml-api
version = 0.1.0
author = Toopy
author_email = florent@toopy.org
description = My OpenClassrooms Sentiment Model API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/toopy/oc-sentiment-ml-api
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    cloudpickle
    fastapi
    joblib
    numpy
    opencensus-ext-azure
    pandas
    scikit-learn
    tensorflow
    uvicorn

[options.extras_require]
lint =
    pre-commit
    ruff
test =
    httpx
    pytest

[tool.ruff]
line-length = 88
